# Talent-Match

./: .gitignore  API_Documentation.md  Demo.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
frontend/: .gitignore  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: ApiTest.tsx  index.ts
frontend/src/components/AnalysisResults/: AnalysisResults.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/components/InvitationCode/: InvitationCode.tsx
frontend/src/components/JobDescription/: JobDescription.tsx
frontend/src/components/ResumePreview/: ResumePreview.tsx
frontend/src/components/ResumeUpload/: ResumeUpload.tsx
frontend/src/hooks/: useResponsiveLayout.ts
frontend/src/lib/: api.ts
frontend/src/shared/types/: index.ts
frontend/src/utils/: fileValidation.ts  processingUtils.ts
talentmatch/: .gitignore  __init__.py  app.py  config.py  utils.py  utils_backup.py
talentmatch/etc/: embeddingprocessor.py  recommendengine.py
talentmatch/models/: candidate.py
talentmatch/routes/: candidate_routes.py  health_routes.py  recommendation_routes.py
talentmatch/services/: candidate_service.py  recommendation_service.py
talentmatch/static/: index.html
talentmatch/static/assets/: index-8oJGNNWq.js  index-BJpjx1dZ.css
