[project]
name = "talentmatch"
version = "0.1.0"
description = ""
authors = [
    {name = "ShqiW",email = "shqiwen@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "environs (>=14.3.0,<15.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "yapf (>=0.43.0,<0.44.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "openai (>=1.99.1,<2.0.0)",
    "pypdf (>=3.0.1,<4.0.0)"
]

[tool.poetry]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
